--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8" />
+  <title>Meme Generator</title>
+  <link rel="stylesheet" type="text/css" href="index.css" />
+  <script defer type="text/javascript" src="./index.js"></script>
+</head>
+
+<body>
+    <header id="meme_header">
+        <h3 id="header_h3">Meme Generator</h3>
+    </header>
+    <div>
+        <h2>Meme of the Day</h2>
+        <img id="meme-of-the-day-img" src="" alt="FAILED TO LOAD MEME">
+    </div>
+</body>
